--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -368,7 +368,7 @@
 
   "tabContextMenu_reloadAll_label":   { "message": "すべてのタブを再読み込み(&A)" },
   "tabContextMenu_bookmarkAll_label": { "message": "すべてのタブをブックマーク(&T)..." },
-  "tabContextMenu_closeAfter_label":  { "message": "右のタブをすべて閉じる(&I)" },
+  "tabContextMenu_closeAfter_label":  { "message": "下のタブをすべて閉じる(&I)" },
   "tabContextMenu_closeOther_label":  { "message": "他のタブをすべて閉じる(&O)" },
 
   "tabContextMenu_undoClose_label":   { "message": "閉じたタブを元に戻す(&U)" },
