--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -49,6 +49,11 @@
   "tabbar_newTabWithContexualIdentity_tooltip": { "message": "New Container Tab" },
   "tabbar_newTabWithContexualIdentity_default": { "message": "Default" },
 
+  "tabDragHandle_tree_tearoff_tooltip":  { "message": "Start dragging to detach this tree from the window" },
+  "tabDragHandle_tree_bookmark_tooltip": { "message": "Start dragging to bookmark this tree" },
+  "tabDragHandle_tab_tearoff_tooltip":   { "message": "Start dragging to detach this individual tab from the window" },
+  "tabDragHandle_tab_bookmark_tooltip":  { "message": "Start dragging to bookmark this individual tab" },
+
   "groupTab_label": { "message": "$TITLE$ and more",
     "placeholders": {
       "title": { "content": "$1", "example": "title" }
