--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -282,8 +282,9 @@
   "config_warnOnCloseTabs_label": { "message": "同時に複数のタブを閉じるときは確認する" },
 
   "config_allowBookmarkCreationFromDraggedTree_caption": { "message": "ツリーがタブバーの外にドラッグされた時" },
-  "config_allowBookmarkCreationFromDraggedTree_false":   { "message": "通常は別ウィンドウに切り離し、Shift-ドラッグではリンクかブックマークを作成する" },
-  "config_allowBookmarkCreationFromDraggedTree_truye":   { "message": "通常はリンクかブックマークを作成し、Shift-ドラッグで別ウィンドウに切り離す" },
+  "config_allowBookmarkCreationFromDraggedTree_false":   { "message": "別ウィンドウに切り離す（ブックマークの作成はできません）" },
+  "config_allowBookmarkCreationFromDraggedTree_truye":   { "message": "リンクかブックマークを作成する（別ウィンドウへの切り離しはできません）" },
+  "config_showTabDragHandle_label":                      { "message": "タブの端に、目的を指定してドラッグ操作を開始するためのつまみを表示する" },
 
 
   "config_shortcuts_caption": { "message": "キーボードショートカット" },
