Update configuration UI for tab drag behavior

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -285,10 +285,14 @@
 
   "config_warnOnCloseTabs_label": { "message": "Warn me when I attempt to close multiple tabs" },
 
-  "config_allowBookmarkCreationFromDraggedTree_caption": { "message": "When a tree is dragged outside of the tab bar" },
-  "config_allowBookmarkCreationFromDraggedTree_false":   { "message": "Detach from the window (but impossible to create bookmarks)" },
-  "config_allowBookmarkCreationFromDraggedTree_true":    { "message": "Create links or bookmarks (but impossible to detach from the window)" },
-  "config_showTabDragHandle_label":                      { "message": "Show drag handle on a edge of each tab, to start dragging for specific purpose" },
+  "config_tabDragBehavior_caption":       { "message": "When a tree is dragged outside of the tab bar" },
+  "config_tabDragBehavior_label":         { "message": "Drag:" },
+  "config_tabDragBehaviorShift_label":    { "message": "Shift-Drag:" },
+  "config_tabDragBehavior_tearoff_tree":  { "message": "Detach Whole Tree from the window (but impossible to create bookmarks)" },
+  "config_tabDragBehavior_bookmark_tree": { "message": "Create links or bookmarks from Whole Tree (but impossible to detach from the window)" },
+  "config_tabDragBehavior_tearoff_tab":   { "message": "Detach Individual Tab from the window (but impossible to create bookmark)" },
+  "config_tabDragBehavior_bookmark_tab":  { "message": "Create link or bookmark from Individual Tab (but impossible to detach from the window)" },
+  "config_showTabDragHandle_label":       { "message": "Show drag handle on a edge of each tab, to start dragging for specific purpose" },
 
 
   "config_shortcuts_caption": { "message": "Keyboard shortcuts" },
