Fix mismatch notification message for bookmarked tabs

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -82,7 +82,7 @@
     }},
 
   "bookmarkTabs_notification_success_title": { "message": "Tabs are Successfully Bookmarked" },
-  "bookmarkTabs_notification_success_message": { "message": "$COUNT$ tabs including \"$TITLE$\" are bookmarked in a new folder under \"$PARENT$.",
+  "bookmarkTabs_notification_success_message": { "message": "$COUNT$ tabs including \"$TITLE$\" are bookmarked under a new folder \"$PARENT$\".",
     "placeholders": {
       "title": { "content": "$1", "example": "Title" },
       "count": { "content": "$2", "example": "2" },
