--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -348,7 +348,7 @@
 
   "config_debug_caption": { "message": "開発用" },
 
-  "config_link_startupPage_label": { "message": "起動ページ" },
+  "config_link_startupPage_label": { "message": "初回起動時用のページ" },
   "config_link_groupPage_label":   { "message": "グループ化用タブのページ" },
 
   "config_debug_label": { "message": "デバッグモード" },
