--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -111,6 +111,10 @@
   "warnOnCloseTabs_close":     { "message": "Close tabs" },
   "warnOnCloseTabs_cancel":    { "message": "Cancel" },
 
+  "bookmarkFolderChooser_unspecified":   { "message": "(unspecified)" },
+  "bookmarkFolderChooser_blank":         { "message": "(no name)" },
+  "bookmarkFolderChooser_useThisFolder": { "message": "Use this folder" },
+
   "message_startup_description_1": { "message": "Tree Style Tab is now reborn based on WebExtensions technologies for Firefox 57 and later. Its vertical tab bar is available as one of choosable sidebar panels. If you don't see it yet, hit the " },
   "message_startup_description_key": { "message": "\"F1\" key" },
   "message_startup_description_2": { "message": " or click the " },
@@ -313,6 +317,9 @@
   "config_bookmarkTreeFolderName_before": { "message": "Folder name for \"Bookmark this Tree\":" },
   "config_bookmarkTreeFolderName_after": { "message": "\u200b" },
   "config_bookmarkTreeFolderName_description": { "message": "Available placeholders: %TITLE% (title of the first tab), %URL% (URL of the first tab), %YEAR% (year, four digits), %MONTH% (month, two digits), %DATE% (date, two digits)" },
+
+  "config_defaultBookmarkParentId_label_before":  { "message": "Create new bookmarks under" },
+  "config_defaultBookmarkParentId_label_after":   { "message": "\u200b" },
 
   "config_userStyleRules_label": { "message": "Extra style rules for sidebar contents" },
   "config_userStyleRules_description_before": { "message": "For more options, see " },
