--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -74,7 +74,7 @@
     }},
 
   "bookmarkTree_notification_success_title": { "message": "ツリーをブックマークしました" },
-  "bookmarkTree_notification_success_message": { "message": "「$TITLE$」を含む$COUNT$個のタブを「$PARENT$」内の新しいフォルダーにブックマークしました。",
+  "bookmarkTree_notification_success_message": { "message": "「$TITLE$」を含む$COUNT$個のタブを新しいフォルダー「$PARENT$」内にブックマークしました。",
     "placeholders": {
       "title": { "content": "$1", "example": "タイトル" },
       "count": { "content": "$2", "example": "2" },
