Search dropped non-URL text by default search engine #1527

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -133,6 +133,7 @@
   "message_startup_requestPermissions_description": { "message": "⚠There are some features requiring extra permissions. If you want to activate them, please grant permissions manually." },
   "message_startup_requestPermissions_bookmarks": { "message": "\"Bookmark This Tree\" in the context menu on tabs (requires access to bookmarks)" },
   "message_startup_requestPermissions_allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts (requires script injection to webpages for detection of keyboard operations)" },
+  "message_startup_requestPermissions_search":    { "message": "Search by the default search engine when non-URL text dropped to the tab bar" },
   "message_startup_requestPermissions_menusOverrideContext": { "message": "Better compatibility with other addons which provide extra context menu items for tabs" },
 
   "message_startup_userChromeCss_notify": { "message": "How to hide top tab bar and sidebar header?" },
@@ -387,6 +388,7 @@
 
   "config_requestPermissions_bookmarks": { "message": "Allow to create bookmarks" },
   "config_requestPermissions_allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
+  "config_requestPermissions_search":    { "message": "Search by the default search engine when non-URL text dropped to the tab bar" },
   "config_requestPermissions_menusOverrideContext": { "message": "Better compatibility with other addons which provide extra context menu items for tabs" },
 
   "config_requestPermissions_fallbackToToolbarButton_title": { "message": "Click the \"Tree Style Tab\" toolbar button" },
