--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -319,6 +319,7 @@
   "config_tabDragBehavior_tearoff_tab":   { "message": "タブ単体を別ウィンドウに切り離す（ブックマークの作成はできません）" },
   "config_tabDragBehavior_bookmark_tab":  { "message": "タブ単体からリンクかブックマークを作成する（別ウィンドウへの切り離しはできません）" },
   "config_showTabDragHandle_label":       { "message": "タブの端で、目的を指定してドラッグ操作を開始するためのつまみを表示する" },
+  "config_showTabDragBehaviorNotification_label": { "message": "タブのドラッグ中、サイドバー外にドロップした時の操作説明を表示する" },
 
   "config_dropLinksOnTabBehavior_caption": { "message": "タブにリンクやURL文字列をドロップしたとき" },
   "config_dropLinksOnTabBehavior_ask":     { "message": "どうするか常に訊ねる" },
